force-app/main/default/objects/Coupon_Code__c/Coupon_Code__c.object-meta.xml
<CustomObject>
    <label>Coupon Code</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>