force-app/main/default/objects/Coupon_Code__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Coupon Codes</relationshipLabel>
    <relationshipName>Coupon_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>