force-app/main/default/objects/Coupon_Code__c/fields/Generated_For__c.field-meta.xml
<CustomField>
    <fullName>Generated_For__c</fullName>
    <label>Coupon Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle/Accessories Purchase</fullName>
            </value>
            <value>
                <fullName>Website Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>