force-app/main/default/objects/Coupon_Code__c/fields/Is_Exhausted__c.field-meta.xml
<CustomField>
    <fullName>Is_Exhausted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exhausted</label>
    <type>Checkbox</type>
</CustomField>