force-app/main/default/objects/Coupon_Code__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Coupon Codes</relationshipLabel>
    <relationshipName>Coupon_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>