force-app/main/default/objects/Coupon_Code__c/fields/Reedemed_Value__c.field-meta.xml
<CustomField>
    <fullName>Reedemed_Value__c</fullName>
    <label>Reedemed Value</label>
    <summarizedField>Redemption__c.Value_Redeemed__c</summarizedField>
    <summaryForeignKey>Redemption__c.Coupon_Code__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>