force-app/main/default/objects/Coupon_Code__c/fields/Remaining_Value__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Value__c</fullName>
    <formula>Value__c  -  Reedemed_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>